introducing redis as cache layer

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@
 
 # MySQL connection string
 DATABASE_URL="mysql://USER:PASSWORD@localhost:3306/matchmaker"
+REDIS_URL="redis://localhost:6379"
 
 # Server port
 PORT=3000
