--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,14 @@
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "prisma": "^6.19.2",
+    "redis": "^5.10.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
     "@types/node-cron": "^3.0.11",
+    "@types/redis": "^4.0.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
