--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "node-cron": "^4.2.1",
     "prisma": "^6.19.2",
     "redis": "^5.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -26,6 +28,8 @@
     "@types/node": "^25.0.10",
     "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
