change folder name and add rating history

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,11 @@
 DATABASE_URL="mysql://USER:PASSWORD@localhost:3306/matchmaker"
 REDIS_URL="redis://localhost:6379"
 
+# Rating system configuration
+RATING_ALGORITHM="deterministic"
+RATING_K_FACTOR=32
+RATING_ENABLE_HISTORY="true"
+
 # Server port
 PORT=3000
 
